<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.meditationapp.viewModel.HistoryEditViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lavender" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragment.HistoryEditFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="30dp">

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.history.date}"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    tools:text="@string/date_hint"/>

                <LinearLayout
                    android:id="@+id/meditation_time_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/meditation_time_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meditation_time_title"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/meditation_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@{viewModel.history.meditationTime}"
                        android:textSize="25sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/dim_gray"/>

                <LinearLayout
                    android:id="@+id/music_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/music_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/music_title"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/music_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@{viewModel.history.music}"
                        android:textSize="25sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/dim_gray"/>

                <LinearLayout
                    android:id="@+id/memo_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/memo_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/memo_title"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/memo_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:gravity="top|start"
                        android:text="@={viewModel.memo}"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:hint="@string/memo_hint"
                        android:inputType="textMultiLine"
                        android:lines="5"
                        android:background="@drawable/square_frame"/>

                </LinearLayout>

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="50dp"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="30dp"
                    android:text="@string/edit_complete"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:onClick="@{() -> viewModel.clickComplete()}"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>